2006-07-27  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.c: brought back "toggle" handler, but
	  do not call it when events are being caught by the press_collapser
	  (Closes NB#36129)

2006-07-26  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-log.[ch]: New files. GObject for
	  logging and watching of plugins.
	* hildon-status-bar/hildon-status-bar-item.[ch]: 
	  - added signal for logging.
	  - splitted instance and initialization of plugin.
	* hildon-status-bar/hildon-status-bar-main.[ch]:
	  - added support for HildonLog
	* hildon-status-bar/Makefile.am: Added hildon-log.[ch].

2006-07-26  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: use the is-inconsistent property
	  to decide which state to draw the button in. This allows the button
	  to be drawn as untoggled when the fifth application is chosen in the
	  AS menu

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.15

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	Applied further fix to "Application switcher area does not immediately
	reflect the state of the application" (Closes NB#35604)
	* hildon-navigator/hn-app-button.c: Added method to force the update
	  of the button icon
	* hildon-navigator/hn-app-switcher.c: Force the update of the icon
	  when a change occurs in an entry structure

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watched-window.c:
	  - manually top a hildon-app when coming out of hibernation
	  - various cleanups

2006-07-25  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Crash:When opening an application that was perviously BG
	killed and closed using the "x" in AS menu." (Closes NB#35605)
	* Remove a window from the hibernating hash-table if bg_killed app
	  is closed.

2006-07-24  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Application switcher area does not immediately reflect the